<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5"
    tools:context=".main.MainActivity"
    tools:ignore="MissingPrefix">

    <TextView
        android:id="@+id/hearthstone"
        style="@style/BigTitle"
        android:layout_width="225dp"
        android:layout_height="55dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="91dp"
        android:gravity="bottom"
        android:text="@string/hearthstone"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/div"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="39dp"
        android:layout_alignParentTop="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hearthstone"
        android:background="@android:color/white"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/div">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/classesLabel"
                style="@style/Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/classes_label" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/classesList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/setsLabel"
                style="@style/Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sets_label" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/setsList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/typesLabel"
                style="@style/Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/types_label" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/typesList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/factionsLabel"
                style="@style/Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faction_label" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/factionList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/qualitiesLabel"
                style="@style/Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qualities_label" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/qualitiesList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/racesLabel"
                style="@style/Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/races_label" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recesList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/welcome"
        style="@style/Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Welcome, Khadgar" />

    <TextView
        android:id="@+id/logoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="6dp"
        android:padding="3dp"
        style="@style/Label"
        android:textStyle="italic"
        android:text="@string/logout_btn"
        app:layout_constraintEnd_toEndOf="@+id/welcome"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

</androidx.constraintlayout.widget.ConstraintLayout>